--- a/app/style.css
+++ b/app/style.css
@@ -1,11 +1,20 @@
 body {
-  background-image: url("../public/assets/home/background-home-desktop.jpg");
+  background-image: url("../public/assets/home/background-home-mobile.jpg");
   background-size: cover;
-  background-attachment: fixed;
   background-color: #0b0d17;
   color: #d0d6f9;
 }
 
+@media only screen and (min-width: 640px) {
+  body {
+    background-image: url("../public/assets/home/background-home-tablet.jpg");
+  }
+}
+@media only screen and (min-width: 1024px) {
+  body {
+    background-image: url("../public/assets/home/background-home-desktop-4k.png");
+  }
+}
 .barlow {
   font-family: var(--font-barlow), sans-serif;
 }
