--- a/app/style.scss
+++ b/app/style.scss
@@ -2,11 +2,23 @@ $blue-main: #0b0d17;
 $blue-accent: #d0d6f9;
 
 body {
-  background-image: url("../public/assets/home/background-home-desktop.jpg");
+  background-image: url("../public/assets/home/background-home-mobile.jpg");
   background-size: cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
+}
+
+@media only screen and (min-width: 640px) {
+  body {
+    background-image: url("../public/assets/home/background-home-tablet.jpg");
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    background-image: url("../public/assets/home/background-home-desktop-4k.png");
+  }
 }
 
 .barlow {
