--- a/app/style.scss
+++ b/app/style.scss
@@ -2,22 +2,34 @@ $blue-main: #0b0d17;
 $blue-accent: #d0d6f9;
 
 body {
-  background-image: url("../public/assets/home/background-home-mobile.jpg");
   background-size: cover;
   // background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
 }
 
+.home-page {
+  background-image: url("../public/assets/home/background-home-mobile.jpg");
+}
+.destination-page {
+  background-image: url("../public/assets/destination/background-destination-mobile.jpg");
+}
+
 @media only screen and (min-width: 640px) {
-  body {
+  .home-page {
     background-image: url("../public/assets/home/background-home-tablet.jpg");
+  }
+  .destination-page {
+    background-image: url("../public/assets/destination/background-destination-tablet.jpg");
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  body {
+  .home-page {
     background-image: url("../public/assets/home/background-home-desktop-4k.png");
+  }
+  .destination-page {
+    background-image: url("../public/assets/destination/background-destination-desktop.jpg");
   }
 }
 
@@ -34,6 +46,7 @@ body {
 }
 
 .horizontal-line {
+  height: 1.5px;
   background-color: rgba(255, 255, 255, 0.25);
 }
 
