--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,21 @@
+/* Width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #d0d6f9; /* Tailwind blue-700 */
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+
 body {
   background-size: cover;
   background-color: #0b0d17;
