--- a/app/style.css
+++ b/app/style.css
@@ -30,12 +30,19 @@ body {
   background-image: url("../public/assets/destination/background-destination-mobile.jpg");
 }
 
+.crew-page {
+  background-image: url("../public/assets/crew/background-crew-mobile.jpg");
+}
+
 @media only screen and (min-width: 640px) {
   .home-page {
     background-image: url("../public/assets/home/background-home-tablet.jpg");
   }
   .destination-page {
     background-image: url("../public/assets/destination/background-destination-tablet.jpg");
+  }
+  .crew-page {
+    background-image: url("../public/assets/crew/background-crew-tablet.jpg");
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -44,6 +51,9 @@ body {
   }
   .destination-page {
     background-image: url("../public/assets/destination/background-destination-desktop.jpg");
+  }
+  .crew-page {
+    background-image: url("../public/assets/crew/background-crew-desktop-4k.png");
   }
 }
 .barlow {
@@ -67,4 +77,9 @@ body {
   position: absolute;
   transform: scale(0);
   transition: all 0.3s ease;
+}
+
+.fade-bottom {
+  mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
+  -webkit-mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
 }/*# sourceMappingURL=style.css.map */
