--- a/app/style.css
+++ b/app/style.css
@@ -22,6 +22,10 @@ body {
   color: #d0d6f9;
 }
 
+.blue-main {
+  color: #0b0d17;
+}
+
 .home-page {
   background-image: url("../public/assets/home/background-home-mobile.jpg");
 }
@@ -34,6 +38,10 @@ body {
   background-image: url("../public/assets/crew/background-crew-mobile.jpg");
 }
 
+.technology-page {
+  background-image: url("../public/assets/technology/background-technology-mobile.jpg");
+}
+
 @media only screen and (min-width: 640px) {
   .home-page {
     background-image: url("../public/assets/home/background-home-tablet.jpg");
@@ -43,6 +51,9 @@ body {
   }
   .crew-page {
     background-image: url("../public/assets/crew/background-crew-tablet.jpg");
+  }
+  .technology-page {
+    background-image: url("../public/assets/technology/background-technology-tablet.jpg");
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -54,6 +65,9 @@ body {
   }
   .crew-page {
     background-image: url("../public/assets/crew/background-crew-desktop-4k.png");
+  }
+  .technology-page {
+    background-image: url("../public/assets/technology/background-technology-desktop-4k.png");
   }
 }
 .barlow {
