--- a/app/style.scss
+++ b/app/style.scss
@@ -21,7 +21,7 @@ $blue-accent: #d0d6f9;
 
 body {
   background-size: cover;
-  // background-attachment: fixed;
+  background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
 }
