--- a/app/style.scss
+++ b/app/style.scss
@@ -24,6 +24,7 @@ body {
   background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
+  // transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
 .blue-main {
