--- a/app/style.scss
+++ b/app/style.scss
@@ -111,3 +111,6 @@ body {
   -webkit-mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
 }
 
+.hamburger-react div {
+  height: 2px !important;
+}
