--- a/app/style.css
+++ b/app/style.css
@@ -16,12 +16,15 @@
   background-clip: content-box;
 }
 
+.split * {
+  will-change: transform;
+}
+
 body {
   background-size: cover;
   background-attachment: fixed;
   background-color: #0b0d17;
   color: #d0d6f9;
-  transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
 .blue-main {
@@ -112,11 +115,11 @@ body {
 
 .explore-btn {
   position: relative;
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .explore-btn:hover {
-  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.5);
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.2);
+  transition: box-shadow 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .explore-btn::before,
@@ -132,13 +135,13 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   opacity: 0;
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .explore-btn:hover::before,
 .explore-btn:hover::after {
   opacity: 1;
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .explore-btn::before {
@@ -153,7 +156,7 @@ body {
   width: 74%;
   height: 74%;
   transform: translate(-50%, -50%) rotate(50deg);
-  box-shadow: 0px -40px 90px rgb(202, 251, 251);
+  box-shadow: 0px -40px 90px rgba(202, 251, 251, 0.5);
   animation-duration: 40s;
 }
 
