--- a/app/style.scss
+++ b/app/style.scss
@@ -19,12 +19,16 @@ $blue-accent: #d0d6f9;
   background-clip: content-box;
 }
 
+.split * {
+  will-change: transform;
+}
+
 body {
   background-size: cover;
   background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
-  transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
+  // transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
 .blue-main {
@@ -120,7 +124,7 @@ body {
   transition: box-shadow 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
-    box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.2);
     transition: box-shadow 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
@@ -156,11 +160,11 @@ body {
   animation-duration: 30s;
 }
 
-.explore-btn::after {
+.explore-btn::after { 
   width: 74%;
   height: 74%;
   transform: translate(-50%, -50%) rotate(50deg);
-  box-shadow: 0px -40px 90px rgb(202, 251, 251);
+  box-shadow: 0px -40px 90px rgba(202, 251, 251, 0.5);
   animation-duration: 40s;
 }
 
