--- a/app/style.scss
+++ b/app/style.scss
@@ -28,6 +28,7 @@ body {
   background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
+  overflow: hidden;
   // transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
@@ -102,6 +103,7 @@ body {
 .horizontal-line {
   height: 1.5px;
   background-color: rgba(255, 255, 255, 0.25);
+  transition: all 0.125s ease-in-out;
 }
 
 // .circle {
