--- a/app/style.css
+++ b/app/style.css
@@ -10,10 +10,25 @@
 
 /* Thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #d0d6f9; /* Tailwind blue-700 */
+  background-color: #d0d6f9;
   border-radius: 8px;
   border: 4px solid transparent;
   background-clip: content-box;
+}
+
+::-moz-selection {
+  color: #0b0d17;
+  background: #d0d6f9;
+}
+
+::selection {
+  color: #0b0d17;
+  background: #d0d6f9;
+}
+
+::-moz-selection {
+  color: #0b0d17;
+  background: #d0d6f9;
 }
 
 .split * {
