--- a/app/style.scss
+++ b/app/style.scss
@@ -38,7 +38,7 @@ body {
   background-attachment: fixed;
   background-color: $blue-main;
   color: $blue-accent;
-  overflow: hidden;
+  // overflow: hidden;
   // transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
