--- a/app/style.scss
+++ b/app/style.scss
@@ -42,7 +42,7 @@ body {
   // transition: background-image 0.75s ease-in-out, background-color 0.75s ease-in-out;
 }
 
-.page-wrapper {
+.content-wrapper {
   overflow: hidden;
 }
 
